@@ -1,5 +1,9 @@
 package controllers;
 
+import entities.CountableIngredient;
+import entities.Ingredient;
+import entities.Post;
+import entities.Recipe;
 import org.junit.jupiter.api.AfterAll;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeAll;
@@ -10,8 +14,11 @@ import static org.junit.jupiter.api.Assertions.*;
 import use_cases.LoginManager;
 import use_cases.UserManager;
 
+import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.List;
+import java.util.UUID;
 
 class UserProfileControllerTest {
     private static final MySQLController mySQLController = new MySQLController();
@@ -19,7 +26,10 @@ class UserProfileControllerTest {
     private static final UserManager userManager = new UserManager(mySQLController);
     private static final DummyInOut inOut = new DummyInOut();
     private static final UserProfileController userProfileController = new UserProfileController(inOut, mySQLController, loginManager);
+    final static LocalDateTime dateTime = LocalDateTime.of(2021, 12, 3, 4, 20, 1);
+    final static String recipeId = UUID.randomUUID().toString();
     final ArrayList<String> inputs = new ArrayList<>();
+    static Post post;
 
     @BeforeAll
     static void setup() {
@@ -84,7 +94,7 @@ class UserProfileControllerTest {
 
     @Test
     void testRunBrowseProfileInvalid() {
-        ArrayList<String> inputs = new ArrayList<>(Arrays.asList("troy"));
+        ArrayList<String> inputs = new ArrayList<>(List.of("troy"));
         inOut.setInput(inputs);
         userProfileController.runBrowseProfile();
         String output = String.join("", inOut.getOutputs());
@@ -92,7 +102,6 @@ class UserProfileControllerTest {
         assertTrue(output.endsWith("Error! Either user is not in the database or user is yourself! " +
                 "Returning to main page"));
     }
-
 
     @Test
     void testRunCustomizeUsernameInvalid() {
@@ -159,5 +168,36 @@ class UserProfileControllerTest {
         String output = String.join("", outputs);
 
         assertTrue(output.endsWith("Successfully changed password to: " + "12345" + "\n" + "Returning to main page."));
+    }
+
+    @Test
+    void testViewOwnPostsWithZeroPosts() {
+        ArrayList<String> inputs = new ArrayList<>(List.of("3"));
+        inOut.setInput(inputs);
+        userProfileController.run(ShellAction.CUSTOMIZEPROFILE);
+        ArrayList<String> outputs = inOut.getOutputs();
+        String output = String.join("", outputs);
+
+        assertTrue(output.endsWith("You have no posts! Returning to main menu."));
+    }
+
+    @Test
+    void testViewOtherUserPostsWithZeroPosts() {
+        ArrayList<String> inputs = new ArrayList<>(Arrays.asList("tester", "1"));
+        inOut.setInput(inputs);
+        userProfileController.run(ShellAction.BROWSEPROFILE);
+        ArrayList<String> outputs = inOut.getOutputs();
+        String output = String.join("", outputs);
+
+        assertTrue(output.endsWith("Target user has no posts! Returning to main menu"));
+    }
+
+    @Test
+    void testBrowsePost() {
+        ArrayList<Ingredient> ingredients = new ArrayList<>(List.of(new CountableIngredient("apples", 13)));
+        ArrayList<String> steps = new ArrayList<>(Arrays.asList("Get apples", "Throw them"));
+        Recipe recipe = new Recipe("Test", ingredients, steps, recipeId);
+        post = new Post("2", dateTime, recipe, "test", "100");
+        loginManager.getCurrUser().addPost(post);
     }
 }
